RESOLVED FIXED38192
Cannot compile on Mac OS X using GYP and enable_svg=0
https://bugs.webkit.org/show_bug.cgi?id=38192
Summary Cannot compile on Mac OS X using GYP and enable_svg=0
jochen
Reported 2010-04-27 04:17:12 PDT
Cannot compile on Mac OS X using GYP and enable_svg=0
Attachments
Patch (3.11 KB, patch)
2010-04-27 04:19 PDT, jochen
no flags
jochen
Comment 1 2010-04-27 04:19:42 PDT
Shinichiro Hamaji
Comment 2 2010-04-27 04:36:27 PDT
Comment on attachment 54409 [details] Patch Looks good!
WebKit Commit Bot
Comment 3 2010-04-27 17:38:14 PDT
Comment on attachment 54409 [details] Patch Clearing flags on attachment: 54409 Committed r58360: <http://trac.webkit.org/changeset/58360>
WebKit Commit Bot
Comment 4 2010-04-27 17:38:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.