2010-04-27  Jochen Eisinger  <jochen@chromium.org>

Reviewed by Shinichiro Hamaji.

        Fix gyp build on Mac OS X with enable_svg=0.
        https://bugs.webkit.org/show_bug.cgi?id=38192

        * WebCore.gyp/WebCore.gyp: Only generate SVG symbols if enable_svg!=0.
        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue): Add missing unimplemented CSS properties to switch statement.

Canonical link: https://commits.webkit.org/49630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58360 268f45cc-cd09-0410-ab3c-d52691b4dbfc